# effcee

./: .appveyor.yml  .bazelrc  .gitignore  .travis.yml  BUILD.bazel  CHANGES  CMakeLists.txt  CONTRIBUTORS  MODULE.bazel  README.md  WORKSPACE
cmake/: setup_build.cmake  utils.cmake
effcee/: CMakeLists.txt  check.cc  check.h  check_test.cc  cursor.h  diagnostic.h  effcee.h  export.h  match.cc  match_test.cc  result_test.cc
examples/: CMakeLists.txt  effcee-example-driver.py
kokoro/macos-clang-release-bazel/: build.sh
kokoro/scripts/linux/: build-docker.sh  build.sh
kokoro/scripts/windows/: build.bat
kokoro/windows-msvc-2019-debug/: continuous.cfg  presubmit.cfg
utils/: check_code_format.sh
